--- a/frontend/register.html
+++ b/frontend/register.html
@@ -3,18 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>▶ 블록체인 계약 등록 시스템</title>
-  <link rel="stylesheet" href="/static/css/register.css" />
+  <title>✍️ 계약서 등록</title>
   <link rel="stylesheet" href="/static/css/style.css" />
 </head>
 <body>
   <div class="container">
-    <!-- 로그아웃 버튼 -->
     <div style="text-align: right;">
       <button onclick="logout()" class="logout-btn">🚪 로그아웃</button>
     </div>
 
-    <h1>회사 계약 등록</h1>
+    <h1>계약서 등록</h1>
 
     <section class="card">
       <h2>✍️ 계약서 등록</h2>
@@ -22,26 +20,15 @@
         <label for="file">PDF 계약서 파일</label>
         <input type="file" id="file" name="file" accept="application/pdf" required />
 
-        <label for="asset_id">자사 ID</label>
-        <input type="text" id="asset_id" name="asset_id" placeholder="자사 ID 입력" required />
+        <label for="asset_id">자산 ID</label>
+        <input type="text" id="asset_id" name="asset_id" placeholder="자산 ID 입력" required />
+
+        <label for="party_b">상대방 주소 (PartyB)</label>
+        <input type="text" id="party_b" name="party_b" placeholder="0x상대방_주소" required />
 
         <button type="submit">등록하기</button>
       </form>
       <div id="registerResult" class="result" style="display: none;"></div>
-    </section>
-
-    <section class="card">
-      <h2>🔍 계약서 조회</h2>
-      <form id="lookupForm" class="form-section">
-        <label for="lookup_trade_id">Trade ID</label>
-        <input type="text" id="lookup_trade_id" name="lookup_trade_id" placeholder="Trade ID" required />
-
-        <label for="lookup_tx_hash">Tx Hash</label>
-        <input type="text" id="lookup_tx_hash" name="lookup_tx_hash" placeholder="Transaction Hash" required />
-
-        <button type="submit">조회</button>
-      </form>
-      <div id="lookupResult" class="result" style="display: none;"></div>
     </section>
   </div>
 
