--- a/frontend/admin-login.html
+++ b/frontend/admin-login.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>일반 사용자 로그인</title>
+  <title>관리자 로그인</title>
   <link rel="stylesheet" href="/static/css/style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>🔐 일반 사용자 로그인</h1>
-    <button id="loginBtn">지갑 로그인</button>
-    <div id="loginResult" class="result" style="display:none;"></div>
+    <h1>🔐 관리자 로그인</h1>
+    <button id="adminLoginBtn">관리자 지갑 로그인</button>
+    <div id="adminLoginResult" class="result" style="display:none;"></div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-  <script src="/static/js/auth.js"></script>
+  <script src="/static/js/admin-auth.js"></script>
 </body>
 </html>
